# maskcompression

./: .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  run.py
maskcompression/: CMakeLists.txt
maskcompression/src/: compress.cpp  compress.h  decompress.cu  decompress.h  maskcompression.cpp
src/maskcompression/: __init__.py
src/maskcompression/_C/: CMakeLists.txt
src/maskcompression/_C/include/maskcompression/: decompress.h
src/maskcompression/_C/python/: maskcompression.cpp
src/maskcompression/_C/src/: compress.cpp  decompress.cu
tests/: maskcompression_test.py
